fix: BrowserRouter to HashRouter

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,6 +34,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://swing-park.github.io/nomflix",
   "browserslist": {
     "production": [
       ">0.2%",
